Minggu 4: Add Loader

--- a/minggu4/index.html
+++ b/minggu4/index.html
@@ -22,7 +22,7 @@
     <title>Form PPDF</title>
   </head>
   <body style="background-color: #F3F1EC;font-family: 'Open Sans';">
-    <!-- <div class="preloader">
+    <div class="preloader">
         <div class="loader">
             <div class="loader-outter"></div>
             <div class="loader-inner"></div>
@@ -34,7 +34,7 @@
                 </svg>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <div class="container" style="padding:15;min-height: 700px;">
         <center>
