--- a/minggu6/index.html
+++ b/minggu6/index.html
@@ -8,46 +8,40 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Vidio Subtitle - PWEB</title>
+    <title>Index - PWEB</title>
   </head>
   <body style="background-color: gray;">
     <div class="container">
         <header class="d-flex justify-content-center py-3" style="background-color: #ffff; border-radius: 10px 10px 0px 0px;">
           <ul class="nav nav-pills">
-            <li class="nav-item"><a href="layout.html" class="nav-link " aria-current="page">Layout</a></li>
-            <li class="nav-item"><a href="summary.html" class="nav-link ">Summary</a></li>
-            <li class="nav-item"><a href="time.html" class="nav-link ">Time</a></li>
-            <li class="nav-item"><a href="audio.html" class="nav-link ">Audio</a></li>
-            <li class="nav-item"><a href="vidio.html" class="nav-link ">Vidio</a></li>
-            <li class="nav-item"><a href="vidio-gif.html" class="nav-link">Vidio Gif</a></li>
-            <li class="nav-item"><a href="vidio-subtitle.html" class="nav-link active">Vidio Subtitle</a></li>
-            <li class="nav-item"><a href="vidio-youtube.html" class="nav-link ">Vidio Youtube</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Index</a></li>
+            <li class="nav-item"><a href="../CV Bagas Aditya Mahendra.pdf" class="nav-link ">Download CV</a></li>
+            <li class="nav-item"><a href="contact.html" class="nav-link ">Contact</a></li>
+            <li class="nav-item"><a href="about-me.html" class="nav-link ">About Me</a></li>
           </ul>
         </header>
         <div class="" style="background-color: #ffff; border-radius: 0px 0px 0px 0px;">
             <div class="pt-3 text-center ">
-                <h1 class="display-4 fw-bold">Subtitle Vidio Demo</h1>
+                <h1 class="display-4 fw-bold">Macbook M1</h1>
                 <div class="col-lg-6 mx-auto">
-                    <div class="text-danger text-bold">
-                      <video controls> 
-                        <source src="cat-herd.webm" type="video/webm"/> 
-                        <!-- <source src="cat-herd.mp4" type="video/mp4"/>  -->
-                        <track src="subtitle.vtt" kind="subtitles" srclang="id" 
-                        label="Indonesia"/> 
-                      </video> 
-                    </div>
+                  <p class="lead mb-4">Laptop Apple yang paling tipis dan ringan, bertenaga super dengan chip Apple M1. Tuntaskan berbagai proyek Anda dengan CPU 8-core super cepat. Tingkatkan aplikasi dan game kaya grafis ke level lebih tinggi dengan GPU hingga 8-core.</p>
+                  
+                </div>
+                <div class="overflow-hidden" style="">
+                  <div class="container px-5">
+                    <img src="https://miro.medium.com/max/2000/1*WKkk2FTBSe0jZLzjGYj6sQ.jpeg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" loading="lazy" width="700" height="500">
+                  </div>
                 </div>
             </div>
         </div>
         <div style="background-color: #ffff; border-radius: 0px 0px 0px 0px;">
             <footer class="py-3">
-              
               <p class="text-center text-muted">© 2021 Pemrograman Web</p>
             </footer>
           </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-   
+
   </body>
 </html>
